[FIX]: add spacing in sections

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,9 @@ h1 {
   font-size: 2.5rem;
 }
 
+section {
+  padding: 1.5rem;
+}
 /* UTILITIY CLASSES */
 
 .text-highlighted {
